# KUKA_Agentic_Workspace_Template

./: .cursorignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COWORK_CLAUDE_DESKTOP.md  LICENSE  README.md  SETUP.md  kuka-agentic-workspace.code-workspace
.cursor/agents/: _ROSTER.md  architect.md  documentation.md  intake.md  integration.md  motion-synthesis.md  orchestrator.md  qa.md  safety.md
.cursor/rules/: agents-handoff.mdc  customer-programs.mdc  kuka-dataset-reference.mdc  kuka-fieldbus.mdc  kuka-krl-conventions.mdc  kuka-safety.mdc  kuka-workvisual.mdc  workspace-context.mdc
cowork/schemas/: dataset_entry.schema.json  handoff.schema.json  program_intake.schema.json  program_spec.schema.json  review.schema.json  safety_review.schema.json  task_state.schema.json
cowork/templates/: HANDOFF_TEMPLATE.md  INGESTION_ENTRY_TEMPLATE.md  INTEGRATION_SPEC_TEMPLATE.md  PROGRAM_SPEC_TEMPLATE.md  (+3 more)
customer_programs/: PROGRAM_REPOSITORY_INDEX.md  _manifest.json  _manifest.schema.json
evals/: README.md  runner.py
kuka_dataset/: DATASET_INDEX.md  DATASET_README.md  INGESTION_SCHEMA.md  REVIEW_ingestion_2026-04-22.md  _ingestion_log.md  _manifest.json  _manifest.schema.json
mcp_servers/: README.md  mcp.example.json
mcp_servers/kuka_knowledge/: README.md  pyproject.toml
mcp_servers/kuka_knowledge/kuka_knowledge/: __init__.py  server.py
mcp_servers/program_repository/: README.md  pyproject.toml
mcp_servers/program_repository/program_repository/: __init__.py  server.py
mcp_servers/safety_lint/: README.md  pyproject.toml
mcp_servers/safety_lint/safety_lint/: __init__.py  rules.py  server.py
research/: RESEARCH_PROMPT_KUKA_KRL.md  RESEARCH_TRACKING.md
(+47 files in other folders)
