[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "program-repository"
version = "0.1.0"
description = "MCP server exposing customer_programs/ for listing, fetching, and structural diffing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The Way Automation LLC" }]
dependencies = [
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["program_repository"]
