[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safety-lint"
version = "0.1.0"
description = "MCP server for deterministic safety + convention linting of KRL .src files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The Way Automation LLC" }]
dependencies = [
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["safety_lint"]
